# search-engine-qt

./: CMakeLists.txt  README.md
JSONs/: test.json
include/: file_manager.h  inverted_index.h  mainwindow.h
interface/: engine.ui
src/: file_manger.cpp  inverted_index.cpp  main.cpp  mainwindow.cpp
